# foclan

./: MANIFEST.in  README.md  pyproject.toml
benchmarks/: main-106.json
docs/: BENCHMARK.md  BRIDGES.md  BRIDGE_SPEC.md  CODEX.md  CURSOR.md  EXTENSIONS.md  FUTURE_CAPABILITIES.md  INSTALL.md  RECOMMENDED_DIALECT.md  ROADMAP.md  SCOPE.md
examples/: README.md
examples/current/: active_top_city.focus  choose_stats_or_meta.focus  counts_dashboard.focus  openai_json_extract.focus  prepare_llm_payload.focus
examples/current/env/: openai_text_summary.json
examples/future/: provider_calls.md
prompt/: README.md  anti_overthinking.md  few_shot_examples.md  system_guide.md
src/foclan/: __init__.py  api.py  benchmarking.py  bridges.py  cli.py  errors.py  examples.py  extensions.py  ir.py  ops.py  parser.py  prompting.py  resources.py  runtime.py  scaffolding.py  validator.py
src/foclan/resources/examples/current/: top_user_and_paid_countries.focus
src/foclan/resources/examples/current/env/: llm_payload.json  openai_json_extract.json  stats_or_meta.json  users_orders.json
src/foclan/resources/prompt/: README.md  few_shot_examples.md  system_guide.md  task_template.md
src/foclan/resources/templates/codex/: AGENTS.md
templates/cursor/: foclan-v1.mdc
templates/project/: README.md
templates/project/inputs/: contact_extract.json  users_orders.json
templates/project/programs/: counts_dashboard.focus  extract_contact.focus
tests/: test_foclan.py
