[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foclan"
version = "1.0.0b1"
description = "Foclan 1.0: a compact LLM-first language for precise data transformation and output shaping."
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
]
benchmark = [
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
]

[project.scripts]
foclan = "foclan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
foclan = [
  "resources/prompt/*.md",
  "resources/examples/current/*.focus",
  "resources/examples/current/env/*.json",
  "resources/benchmarks/*.json",
  "resources/templates/codex/*.md",
  "resources/templates/cursor/*.mdc",
  "resources/templates/project/*.md",
  "resources/templates/project/*.txt",
  "resources/templates/project/*.example",
  "resources/templates/project/programs/*.focus",
  "resources/templates/project/inputs/*.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
